--- a/src/index.css
+++ b/src/index.css
@@ -11,17 +11,38 @@
 body {
   background-color: lightgrey;
   font-family: "Lato", sans-serif;
+  overflow: scroll;
 }
 
 .app-container {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 /* Form Styling */
 
 .form-container {
   border: 1px solid blue;
+  width: 50%;
+  padding: 5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.form-container section {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-container section * {
+  margin: 0.5rem;
+}
+
+.form-container section > h3 {
+  text-align: center;
 }
 
 /* CV Styling */
@@ -30,6 +51,7 @@ body {
   display: flex;
   flex-direction: column;
   border: 1px solid red;
+  width: 50%;
 }
 
 .cv-container div {
