--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,6 @@ body {
   -moz-box-shadow: 0 0 5px 2px #fff;
   box-shadow: 0 0 5px 2px rgb(134, 125, 125);
   border-radius: 7px;
-  width: 50%;
   background-color:rgb(247, 255, 255);
 }
 
@@ -37,6 +36,7 @@ body {
   padding: 5rem;
   display: flex;
   justify-content: space-around;
+  width: 75%;
 }
 
 .form-container section {
@@ -46,6 +46,7 @@ body {
 
 .form-container section > input {
   padding: 0.2rem;
+  width: 250px;
 }
 
 .form-container section * {
@@ -61,7 +62,8 @@ body {
 
 .cv-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
 }
 
 .cv-container h3 {
@@ -85,6 +87,21 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.picture-container {
+  margin-right: 2rem;
+}
+
+.picture-container, .picture-container > h3 {
+  padding: 1rem;
+  text-align: center;
+}
+
+.profile-thumbnail {
+  height: 250px;
+  width: 250px;
+  border-radius: 50%;
 }
 
 .cv-container .buttons-container > .clear-btn {
