--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color:#fff;
+  background-color:rgba(226, 222, 222, 0.411);
   font-family: "Lato", sans-serif;
   overflow: scroll;
 }
@@ -20,6 +20,10 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+header > h1 {
+  font-weight: 400;
 }
 
 /* Form Styling */
