--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color:rgba(226, 222, 222, 0.411);
+  background-color:rgba(247, 242, 242, 0.959);
   font-family: "Lato", sans-serif;
   overflow: scroll;
 }
@@ -24,6 +24,7 @@ body {
 
 header > h1 {
   font-weight: 400;
+  margin: 1rem;
 }
 
 /* Form Styling */
@@ -34,6 +35,8 @@ header > h1 {
   box-shadow: 0 0 5px 2px rgb(134, 125, 125);
   border-radius: 7px;
   background-color:rgb(247, 255, 255);
+  margin: 1rem;
+  font-size: 1.2rem;
 }
 
 .form-container {
@@ -51,6 +54,7 @@ header > h1 {
 .form-container section > input {
   padding: 0.2rem;
   width: 250px;
+  font-size: 1.2rem;
 }
 
 .form-container section * {
@@ -67,7 +71,7 @@ header > h1 {
 .cv-container {
   display: flex;
   justify-content: space-around;
-  width: 50%;
+  width: 40%;
 }
 
 .cv-container h3 {
@@ -76,21 +80,10 @@ header > h1 {
 }
 
 .cv-container div, .cv-container div > span {
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
   font-weight: 300;
-}
-
-.cv-container .buttons-container {
-  display: block;
-  margin: 0 auto;
-}
-
-.cv-container .buttons-container > button {
-  padding: 0.7rem 1rem;
-  margin: 0 1rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 .picture-container {
@@ -108,14 +101,31 @@ header > h1 {
   border-radius: 50%;
 }
 
-.cv-container .buttons-container > .clear-btn {
+/* Buttons */ 
+
+.buttons-container {
+  display: block;
+  margin: 2rem auto;
+}
+
+.buttons-container > button {
+  padding: 1rem 1.5rem;
+  margin: 0 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.buttons-container > .clear-btn {
   background-color: rgb(238, 184, 195);
 }
 
-.cv-container .buttons-container > .download-btn {
+.buttons-container > .download-btn {
   background-color: aquamarine;
 }
 
+/* Media Queries */
 
 @media only screen and (max-width: 576px) {
   .cv-container {
@@ -140,5 +150,4 @@ header > h1 {
     flex-direction: column;
     width: 40%;
   }
-
 }
