--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,7 @@ header > h1 {
     display: flex;
     flex-direction: column;
   }
+
 }
 
 @media only screen and (max-width: 1415px) {
@@ -143,6 +144,10 @@ header > h1 {
     width: 40%;
     margin: 2rem 0;
     padding: 1rem;
+  }
+
+  .form-container > section {
+    margin-bottom: 1rem;
   }
 
   .cv-container {
